# redline-llm

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pytest.ini
.github/workflows/: ci.yml
bench/: FAIRNESS.md  __init__.py  report.py  run_bench.py  test_metrics.py  workload.py
bench/adapters/: __init__.py  llamacpp_a.py  redline_a.py  vllm_a.py
bench/results/crosscheck/: llamacpp_batched_bench_crosscheck.txt  llamacpp_bringup.json  llamacpp_crosscheck_delta.json  redline_primary_serving_reanchor_vllm024_session.json  vllm_batch1_offline_crosscheck_r1.json  vllm_batch1_offline_crosscheck_r2.json  vllm_batch1_offline_crosscheck_r3.json  vllm_longout_offline_crosscheck_r1.json  vllm_longout_offline_crosscheck_r2.json  vllm_longout_offline_crosscheck_r3.json  vllm_primary_offline_crosscheck.json  vllm_primary_offline_crosscheck_r1.json  vllm_primary_offline_crosscheck_r2.json  vllm_primary_offline_crosscheck_r3.json  vllm_primary_serving_reanchor.json
bench/results/equivalence/: transcript-vllm024.json  transcript.json
bench/results/parity/: hf_parity_rtx2060_dev.json
bench/results/profiling/: after_kern_sum.txt  after_step_table.txt  an_redline_cli.json  an_redline_harness.json  an_redline_primary_eager.json  an_vllm_primary.json  analysis_chunk1024.json  analysis_chunk2048.json  arrival_summary.txt  before_kern_sum.txt  before_step_table.txt  bench_v4final.json  gap_analysis_decode500.json  h_final_ptxas.txt  harness_baseline.txt  harness_v1.txt  harness_v2.txt  harness_v3.txt  harness_v4.txt  harness_v4final.txt  harness_v5.txt  kern_sum_v4final_node.txt  probe_nocompute.txt  redline_primary_eager_r1.json  redline_primary_eager_r2.json  redline_primary_eager_r3.json  redline_primary_graphs_r1.json  redline_primary_graphs_r2.json  redline_primary_graphs_r3.json  redline_primary_harness_traced.json  redline_primary_traced_cli.bench.json  vllm_primary_traced.json
bench/results/raw/: llamacpp_arrival.json  llamacpp_batch1.json  llamacpp_primary.json  redline_arrival.json  redline_batch1.json  redline_primary.json  vllm024_arrival.json  vllm024_batch1.json  vllm024_primary.json  vllm_arrival.json  vllm_batch1.json  vllm_primary.json
bench/results/tuning/: llamacpp_primary_b2048_ub2048.json  llamacpp_primary_b4096_ub1024.json  llamacpp_primary_b8192_ub2048.json  llamacpp_primary_default_b2048_ub512.json  llamacpp_sweep_summary.json  vllm024_primary_default.json  vllm024_primary_piecewise.json  vllm_primary_default.json
bench/results/tuning/llamacpp_sampler_chain/: batched_bench_crosscheck_defaultchain.txt  crosscheck_delta_defaultchain.json  diag_decomposition.json  llamacpp_bringup_defaultchain.json  llamacpp_primary_b2048_ub2048_defaultchain.json  llamacpp_primary_b4096_ub1024_defaultchain.json  llamacpp_primary_b8192_ub2048_defaultchain.json  llamacpp_primary_default_b2048_ub512_defaultchain.json  sweep_summary_defaultchain.json
docs/: DESIGN.md  MODEL_SPEC.md  PROFILING.md
python/redline_client/: __init__.py  tokenizer.py
scripts/: fetch_model.py  gen_bf16_golden.py  gen_rope_fixture.py  profile_decode.sh  wsl_bootstrap.sh
scripts/runpod/: create_pod.py  pod_setup.sh  stop_pod.py
src/: bench_main.cpp
src/api/: pybind.cpp
src/core/: block_allocator.cpp  block_allocator.hpp  block_table.hpp  config.cpp  config.hpp  engine.cpp  engine.hpp  model_executor.cpp  model_executor.hpp  request.hpp  scheduler.cpp  scheduler.hpp  types.hpp
src/gemm/: cublaslt_gemm.cpp  cublaslt_gemm.hpp
src/kernels/: argmax.cu  embed_gather.cu  kernels.cuh  kv_gather.cu  kv_scatter.cu  paged_attention.cu  prefill_attention.cu  rmsnorm.cu  rope.cu  silu_mul.cu
src/loader/: convert.cpp  convert.hpp  safetensors.cpp  safetensors.hpp  weights.cpp  weights.hpp
tests/: test_allocator.cpp  test_bf16_convert.cpp  test_config.cpp  test_kernels.cu  test_safetensors.cpp  test_scheduler.cpp  test_weights_map.cpp
tests/data/: rope_fixture.json
tests/e2e/: conftest.py  engine_options.py  gen_layer0_fixture.py  gen_reference.py  prompts.py  test_graph_equivalence.py  test_hf_parity.py  test_invariance.py  test_layer0.py
tests/reference/: attention_ref.hpp  elementwise_ref.hpp  fp16_ref.hpp  pool_ref.hpp  rmsnorm_ref.hpp  rope_ref.hpp
